# st-client

./: build.bat  credentials.json  pyproject.toml  setup.cfg
src/: credentials.json  stc.bat
src/st_client/: __init__.py  stc.py
src/st_client/etc/: settings.py
src/stc/: __init__.py  main.py  st_client.py
