[metadata]
name = st-client
version = 0.0.1
author = Sylvio Ximenez de Azevedo Neto
author_email = sylvioazevedo@gmail.com
description = A cli for the ST projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sylvioazevedo/st-server
project_urls =
    Bug Tracker = https://github.com/sylvioazevedo/st-client/issues

classifiers =
    Programming Language :: Python :: 3
    License ::Proprietary
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    addict==2.4.0
    
[options.packages.find]
where = src

[options.package_data]
* = etc/settings.py
